# cachyos-niri-noctalia

./: Cargo.toml  README.md
config/niri/: autostart.kdl  keybinds-clipboard.kdl
config/wofi/: style.css
etc/skel/.config/gtk-3.0/: settings.ini
etc/skel/.config/niri/cfg/: autostart.kdl  keybinds.kdl
etc/skel/.config/niri/scripts/: clipboard-picker.sh
etc/skel/.config/wofi/: style.css
packaging/: PKGBUILD
src/: main.rs
